[package]
name = "fwatchd"
version = "0.1.0"
authors = ["Patrik Lundgren <patrik.lundgren.95@gmail.com>"]
edition = "2018"

[[bin]]
name = "fwatchctl"
path = "src/fwatchctl.rs"

[[bin]]
name = "fwatchd"
path = "src/fwatchd.rs"

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0"
rust-crypto = "0.2.3"
inotify = "0.10.0"
daemonize = "0.4.1"
libc = "0.2.117"
syslog = "6.0.1"
log = "0.4.14"
bincode = "1.3.3"
nix = "0.23.1"
signal-hook = "0.3.13"

[profile.release]
lto=true
strip=true
panic="abort"
