[package]
name = "fwatchd"
version = "0.1.0"
description = "fwatchd - A file watching daemon"
authors = ["Patrik Nordvall <patrik.nordvall95@gmail.com>"]
repository = "https://github.com/panord/fwatchd"
license = "MIT"
readme = "README.md"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE",
	"README.md"
]
keywords = ["cli", "daemon", "notify", "watch"]
categories = ["command-line-interface"]

[[bin]]
name = "fwatchctl"
path = "src/fwatchctl.rs"

[[bin]]
name = "fwatchd"
path = "src/fwatchd.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
rust-crypto = "0.2"
inotify = "0.10"
daemonize = "0.5"
libc = "0.2"
syslog = "6.0"
log = "0.4"
bincode = "1.3"
nix = "0.23"
signal-hook = "0.3"

[profile.release]
lto=true
strip=true
panic="abort"
